--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.12.0",
     "randomstring": "^1.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
