--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mag1ckdrak0n.github.io/react_dynamic-list-of-posts",
+  "homepage": "http://ivanpoberezhniuk.github.io/react_dynamic-list-of-posts",
   "name": "react_dynamic-list-of-posts",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +9,14 @@
     "randomstring": "^1.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "router": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
